2009-12-27  Daniel Bates  <dbates@webkit.org>

        Reviewed by Eric Seidel.

        https://bugs.webkit.org/show_bug.cgi?id=32964

        [bzt] Updated the unit test based on the change made in bug #32951.

        The change made in bug #32951 added the command-line argument:
        --makeargs="-j8" to the build-webkit command. However, the associated
        unit test was not updated.

        * Scripts/modules/webkitport_unittest.py:

2009-12-27  Yael Aharon  <yael.aharon@nokia.com>

        Reviewed by Darin Adler.

        check-webkit-style should not mark moc files inclusion as errors
        https://bugs.webkit.org/show_bug.cgi?id=32669

        Add a new header type for moc files, and skip them when checking the order of header files.

        * Scripts/modules/cpp_style.py:

2009-12-26  Adam Barth  <abarth@webkit.org>

        Reviewed by Eric Seidel.

        [bzt] Make the qt build go fast
        https://bugs.webkit.org/show_bug.cgi?id=32951

        Make use of multiple cores, if available.

        * Scripts/modules/webkitport.py:

2009-12-25  Daniel Bates  <dbates@rim.com>

        Reviewed by Eric Seidel.

        https://bugs.webkit.org/show_bug.cgi?id=32682

        Fixes an issue where checkFrameworks always dies with an error under Windows
        since the clause "unless (-x $path)" is always satisfied because files under
        Windows do not have an explict executable bit.

        * Scripts/webkitdirs.pm:

2009-12-23  Eric Seidel  <eric@webkit.org>

        Reviewed by Adam Barth.

        bugzilla-tool should accept global options anywhere
        https://bugs.webkit.org/show_bug.cgi?id=26912

        * Scripts/bugzilla-tool:
         - Use the new global_options class property.
         - Add a handle_global_options callback to avoid needing callbacks for each global option.
        * Scripts/modules/multicommandtool.py:
         - Make the code use one combined option parser.